sjengida/g2/setup_attackers
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/see.c:518:21: error: use of undeclared identifier 'rook_o_2'
v2 = ( const char *)rook_o_2; 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/see.c:584:21: error: use of undeclared identifier 'bishop_o_1'
for ( i = 11; ; i = bishop_o_1[v10] ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/see.c:669:7: error: use of undeclared identifier 'knight_o_0'
v17 = knight_o_0 + 4; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/see.c:680:6: error: use of undeclared identifier 'bishop_o_1'
if ( bishop_o_1 == v17 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/see.c:691:6: error: use of undeclared identifier 'bishop_o_1'
if ( bishop_o_1 != v17 ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/setup_attackers/src/obj/see.o] Error 1
